force-app/main/default/objects/Quote/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>Information of Account Owner for Contract Template: Fullname, Email, Phone Number</description>
    <formula>Opportunity.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity.Owner.LastName &amp;BR()&amp; 
&quot; Email: &quot; &amp; Opportunity.Owner.Email &amp;BR()&amp; 
&quot; Telefon: &quot; &amp; Opportunity.Owner.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Contact</label>
    <type>Text</type>
</CustomField>