force-app/main/default/objects/Quote/fields/Client_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Campaign_ID__c</fullName>
    <description>For DB, it is mandatory to include a campaign ID which is provided by the client</description>
    <inlineHelpText>Für DB Angebote ist es nötig, die &quot;Client Campaign ID&quot; einzutragen, damit diese auf der Quote (Angebot) vermerkt ist. Die &quot;Client Campaign ID&quot; wird vom Kunden (DB) bereitgestellt.</inlineHelpText>
    <label>Client Campaign ID</label>
    <type>TextArea</type>
</CustomField>