force-app/main/default/objects/Quote/fields/dPaymentTime__c.field-meta.xml
<CustomField>
    <fullName>dPaymentTime__c</fullName>
    <inlineHelpText>Zeitraum, in dem die Rechnung vom/von der Kund*in beglichen werden muss.</inlineHelpText>
    <label>Payment Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>