force-app/main/default/objects/Quote/fields/fmlAccountName__c.field-meta.xml
<CustomField>
    <fullName>fmlAccountName__c</fullName>
    <formula>Opportunity.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountName</label>
    <type>Text</type>
</CustomField>