force-app/main/default/objects/Quote/fields/fmlBillingEmail__c.field-meta.xml
<CustomField>
    <fullName>fmlBillingEmail__c</fullName>
    <formula>Opportunity.Account.Billing_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Zeigt die Billing Email, die auf der Opportunity hinterlegt wurde, an die, die Rechnungen gesendet werden.</inlineHelpText>
    <label>Billing Email</label>
    <type>Text</type>
</CustomField>