force-app/main/default/objects/Quote/fields/fmlContact_Name__c.field-meta.xml
<CustomField>
    <fullName>fmlContact_Name__c</fullName>
    <formula>Contact.FirstName  &amp; &quot; &quot; &amp;  Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>