force-app/main/default/objects/Quote/fields/fmlContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>fmlContactFirstName__c</fullName>
    <formula>Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>