force-app/main/default/objects/Quote/fields/fmlContactSalutation__c.field-meta.xml
<CustomField>
    <fullName>fmlContactSalutation__c</fullName>
    <formula>IF( ISPICKVAL(Contact.Salutation, &quot;Herr&quot;) , &quot;Herr&quot;, &quot;Frau&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Salutation</label>
    <type>Text</type>
</CustomField>