force-app/main/default/objects/Quote/fields/fmlQuoteFooter__c.field-meta.xml
<CustomField>
    <fullName>fmlQuoteFooter__c</fullName>
    <formula>CASE( Service_Country__c,
&quot;DE&quot;, &quot;Registergericht: Amtsgericht Berlin-Charlottenburg • Registernummer: HRB 175212 B • USt-IdNr.: DE305584183&quot; &amp;BR()&amp;
&quot;Deutsche Steuernummer: 37/345/50019 • Geschäftsführer: Marius Luther &amp; Marius Jeuck&quot;,
&quot;AT&quot;, &quot;Registergericht: Handelsgericht Wien * Registernummer: FN 579225 b * USt-IdNr.: ATU78109627&quot; &amp;BR()&amp;
&quot;Österreichische Steuernummer: 12 845/7652 * Geschäftsführer: Marius Luther &amp; Marius Jeuck&quot;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Footer</label>
    <type>Text</type>
</CustomField>