force-app/main/default/objects/Quote/fields/fmlQuoteHeader__c.field-meta.xml
<CustomField>
    <fullName>fmlQuoteHeader__c</fullName>
    <formula>CASE
(Service_Country__c ,
&quot;DE&quot;, &quot;HeyJobs GmbH&quot; &amp;BR()&amp;
&quot;Paul-Lincke-Ufer 39-40&quot; &amp;BR()&amp;
&quot;10999 Berlin, Deutschland&quot; &amp;BR(),
&quot;AT&quot;, &quot;HeyJobs GmbH c/o andys cc coworking&quot; &amp;BR()&amp;
&quot;Aspernbrückengasse 2&quot; &amp;BR()&amp;
&quot;1020 Wien, Österreich&quot; &amp;BR(),
&apos;&apos;)</formula>
    <label>QuoteHeader</label>
    <type>Text</type>
</CustomField>