force-app/main/default/objects/Quote/fields/fmlQuoteSummary__c.field-meta.xml
<CustomField>
    <fullName>fmlQuoteSummary__c</fullName>
    <formula>&quot;Angebot gültig bis: &quot;&amp;TEXT(DAY(ExpirationDate))&amp;&quot;.&quot;&amp;TEXT(MONTH(ExpirationDate))&amp;&quot;.&quot;&amp;TEXT(YEAR(ExpirationDate)) &amp;BR()&amp; 
&quot;Einlösezeitraum der JobSlots: 12 Monate ab Unterschrift&quot; &amp;BR()&amp;
&quot;Rechnungsstellung: Nach Auftragseingang&quot; &amp;BR()&amp;
&quot;Zahlungsbedingungen: &quot; &amp; TEXT(dPaymentTime__c) &amp; &quot; Tage ohne Abzug per Überweisung&quot; &amp;BR()&amp;
&quot;Jeder JobSlot muss innerhalb der Gültigkeitsdauer aktiviert werden.&quot;</formula>
    <label>QuoteSummary</label>
    <type>Text</type>
</CustomField>