force-app/main/default/objects/Quote/fields/fmlUser__c.field-meta.xml
<CustomField>
    <fullName>fmlUser__c</fullName>
    <formula>Opportunity.Owner.FirstName &amp;&quot; &quot;&amp;  Opportunity.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User</label>
    <type>Text</type>
</CustomField>