force-app/main/default/objects/Quote/fields/H_chstzahl_Jobs_pro_Monat__c.field-meta.xml
<CustomField>
    <fullName>H_chstzahl_Jobs_pro_Monat__c</fullName>
    <description>Stores the amount of jobs per month to display on Quote Template dynamically</description>
    <inlineHelpText>Die maximale Anzahl an Jobs pro Monat, die für diesen REACH-Vertrag verhandelt werden.</inlineHelpText>
    <label>Höchstzahl Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>