force-app/main/default/objects/Quote/fields/Hello_Sign_Signature_Requests__c.field-meta.xml
<CustomField>
    <fullName>Hello_Sign_Signature_Requests__c</fullName>
    <description>Number of related Hello Sign Signature Request Records. Value is populated by Declarative Lookup Rollup Summary.
RO-1409</description>
    <inlineHelpText>Number of related Hello Sign Signature Request Records</inlineHelpText>
    <label>Hello Sign Signature Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>