force-app/main/default/objects/Quote/fields/HeyPaket_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HeyPaket_Start_Date__c</fullName>
    <description>RO-1432</description>
    <inlineHelpText>Startdatum des HeyPakets von der Opportunity (falls eins Ausgewählt wurde)</inlineHelpText>
    <label>HeyPaket Start Date</label>
    <type>Date</type>
</CustomField>