force-app/main/default/objects/Quote/fields/Instalment_Type__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Type__c</fullName>
    <description>RO-1576</description>
    <inlineHelpText>Art der Ratenzahlung für Finance. Mehr Informationen findest du hier https://heyjobs.atlassian.net/wiki/spaces/FIN/pages/2944368769</inlineHelpText>
    <label>Installment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 x 30 Tage</fullName>
            </value>
            <value>
                <fullName>3 x 30 Tage</fullName>
            </value>
            <value>
                <fullName>4 x 30 Tage</fullName>
            </value>
            <value>
                <fullName>5 x 30 Tage</fullName>
            </value>
            <value>
                <fullName>6 x 30 Tage</fullName>
            </value>
            <value>
                <fullName>7 x 30 Tage</fullName>
            </value>
            <value>
                <fullName>8 x 30 Tage</fullName>
            </value>
            <value>
                <fullName>9 x 30 Tage</fullName>
            </value>
            <value>
                <fullName>10 x 30 Tage</fullName>
            </value>
            <value>
                <fullName>11 x 30 Tage</fullName>
            </value>
            <value>
                <fullName>12 x 30 Tage</fullName>
            </value>
            <value>
                <fullName>2 x 90 Tage</fullName>
            </value>
            <value>
                <fullName>3 x 90 Tage</fullName>
            </value>
            <value>
                <fullName>4 x 90 Tage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>