force-app/main/default/objects/Quote/fields/Max_amount_of_jobs__c.field-meta.xml
<CustomField>
    <fullName>Max_amount_of_jobs__c</fullName>
    <formula>Subtotal / 400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max. amount of jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>