force-app/main/default/objects/Quote/fields/Min_amount_of_jobs__c.field-meta.xml
<CustomField>
    <fullName>Min_amount_of_jobs__c</fullName>
    <description>Defining for how many jobs min. the defined amount would last, if all jobs were €1500</description>
    <formula>Subtotal /1500</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min. amount of jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>