force-app/main/default/objects/Quote/fields/Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Type__c</fullName>
    <label>Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Essentials</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Ultimate</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
                <isActive>false</isActive>
                <label>Enterprise</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>