force-app/main/default/objects/Quote/fields/Payment_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Payment_Cycle__c</fullName>
    <description>RO-968 --&gt; will be retired soon in RO-1481</description>
    <label>Payment Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Payments</fullName>
            </value>
            <value>
                <fullName>Yearly Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>