force-app/main/default/objects/Quote/fields/Performance_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Performance_Guarantee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activates the Performance Guarantee Product for this Quote</description>
    <inlineHelpText>Activates the Performance Guarantee Product for this Quote</inlineHelpText>
    <label>Legacy - Performance Guarantee</label>
    <type>Checkbox</type>
</CustomField>