force-app/main/default/objects/Quote/fields/Quote_Footer_English__c.field-meta.xml
<CustomField>
    <fullName>Quote_Footer_English__c</fullName>
    <formula>CASE( Service_Country__c,
&quot;DE&quot;, &quot;Registry Court: District Court Berlin-Charlottenburg • Registry Number: HRB 175212 B • VAT Number.: DE305584183&quot; &amp;BR()&amp;
&quot;German Tax Number: 37/345/50019 • Managing Directors: Marius Luther &amp; Marius Jeuck&quot;,
&quot;AT&quot;, &quot;Registry Court:: Handelsgericht Wien * Registry Number: FN 579225 b * VAT Number.: ATU78109627&quot; &amp;BR()&amp;
&quot;Austrian Tax Number: 12 845/7652 * Managing Directors: Marius Luther &amp; Marius Jeuck&quot;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Footer English</label>
    <type>Text</type>
</CustomField>