force-app/main/default/objects/Quote/fields/Quote_Owner__c.field-meta.xml
<CustomField>
    <fullName>Quote_Owner__c</fullName>
    <description>I created this field to get the Quote Owner in custom reports</description>
    <formula>Owner:User.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Owner</label>
    <type>Text</type>
</CustomField>