force-app/main/default/objects/Quote/fields/Quote_Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Quote_Owner_Profile__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Owner Profile</label>
    <type>Text</type>
</CustomField>