force-app/main/default/objects/Quote/fields/Quote_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Quote_Owner_Role__c</fullName>
    <description>I created this field to get the Quote Owner Role in custom reports</description>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Owner Role</label>
    <type>Text</type>
</CustomField>