force-app/main/default/objects/Quote/fields/Quote_Sending_Method__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sending_Method__c</fullName>
    <description>RO-1409</description>
    <formula>IF( Automatic_Quote_E_Mail__c  &amp;&amp;  Offer_Sent__c , &quot;Automatic Quote Email&quot;,
IF( Hello_Sign_Signature_Requests__c &gt; 0 , &quot;Hello Sign&quot;, &quot;Standard&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Sending Method</label>
    <type>Text</type>
</CustomField>