force-app/main/default/objects/Quote/fields/Quote_Summary_2__c.field-meta.xml
<CustomField>
    <fullName>Quote_Summary_2__c</fullName>
    <formula>&quot;Die Rechnungsstellung erfolgt nach Auftragseingang.&quot; &amp;BR()&amp;
&quot;Rechnungen sind innerhalb von &quot; &amp;TEXT( dPaymentTime__c )&amp; &quot; Tagen ohne Abzug per Überweisung zahlbar.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Summary 2</label>
    <type>Text</type>
</CustomField>