force-app/main/default/objects/Quote/fields/Quote_Summary_2_en__c.field-meta.xml
<CustomField>
    <fullName>Quote_Summary_2_en__c</fullName>
    <description>Text field to be included in quote templates</description>
    <formula>&quot;The invoice is issued after the order is received.&quot; &amp;BR()&amp;
&quot;The invoice has to be settled within &quot; &amp;TEXT( dPaymentTime__c )&amp; &quot; days by bank transfer without deduction.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Text field to be included in quote templates</inlineHelpText>
    <label>Quote Summary 2 en</label>
    <type>Text</type>
</CustomField>