force-app/main/default/objects/Quote/fields/QuoteFooter_AT__c.field-meta.xml
<CustomField>
    <fullName>QuoteFooter_AT__c</fullName>
    <formula>&quot;Registergericht: Handelsgericht Wien * Registernummer: FN 579225 b * USt-IdNr.: ATU78109627&quot; &amp;BR()&amp;
&quot;Österreichische Steuernummer: 12 845/7652 * Geschäftsführer: Marius Luther &amp; Marius Jeuck&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteFooter_AT</label>
    <type>Text</type>
</CustomField>