force-app/main/default/objects/Quote/fields/QuoteHeader_AT_english__c.field-meta.xml
<CustomField>
    <fullName>QuoteHeader_AT_english__c</fullName>
    <description>Used as Header on Quote Templates</description>
    <formula>&quot;HeyJobs GmbH&quot; &amp;BR()&amp;
&quot;Gonzagasse 17&quot; &amp;BR()&amp;
&quot;1010 Wien, Österreich&quot; &amp;BR()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteHeader_AT</label>
    <type>Text</type>
</CustomField>