force-app/main/default/objects/Quote/fields/Segment_Opp_V02__c.field-meta.xml
<CustomField>
    <fullName>Segment_Opp_V02__c</fullName>
    <description>RO-1060</description>
    <formula>TEXT(Opportunity.Segment_Opp_V02__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Opp V02</label>
    <type>Text</type>
</CustomField>