force-app/main/default/objects/Quote/fields/Service_Country__c.field-meta.xml
<CustomField>
    <fullName>Service_Country__c</fullName>
    <description>RO-715</description>
    <formula>Opportunity.Service_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Das Service Country definiert, in welchem Land der zugehörige Account seine operativen Tätigkeiten durchführt. Auf der Quote wird das Service Country des Accounts und der Opportunity angezeigt.</inlineHelpText>
    <label>Service Country</label>
    <type>Text</type>
</CustomField>