force-app/main/default/objects/Quote/fields/Service_Period__c.field-meta.xml
<CustomField>
    <fullName>Service_Period__c</fullName>
    <inlineHelpText>Leistungszeitraum in dem das Budget für den/die Kund*in im Recruiter Portal gültig ist.</inlineHelpText>
    <label>Service Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>2 months</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>4 months</fullName>
            </value>
            <value>
                <fullName>5 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
                <default>true</default>
                <label>6 months</label>
            </value>
            <value>
                <fullName>7 months</fullName>
            </value>
            <value>
                <fullName>8 months</fullName>
            </value>
            <value>
                <fullName>9 months</fullName>
            </value>
            <value>
                <fullName>10 months</fullName>
            </value>
            <value>
                <fullName>11 months</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>13 months</fullName>
            </value>
            <value>
                <fullName>14 months</fullName>
            </value>
            <value>
                <fullName>15 months</fullName>
            </value>
            <value>
                <fullName>16 months</fullName>
            </value>
            <value>
                <fullName>17 months</fullName>
            </value>
            <value>
                <fullName>18 months</fullName>
            </value>
            <value>
                <fullName>19 months</fullName>
            </value>
            <value>
                <fullName>20 months</fullName>
            </value>
            <value>
                <fullName>21 months</fullName>
            </value>
            <value>
                <fullName>22 months</fullName>
            </value>
            <value>
                <fullName>23 months</fullName>
            </value>
            <value>
                <fullName>24 months</fullName>
            </value>
            <value>
                <fullName>36 months</fullName>
            </value>
            <value>
                <fullName>48 months</fullName>
            </value>
            <value>
                <fullName>Ramp-up _Special_-_September_30th</fullName>
                <isActive>false</isActive>
                <label>Ramp-up Special - September 30th</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>