force-app/main/default/objects/Quote/fields/txtContractAnnotation__c.field-meta.xml
<CustomField>
    <fullName>txtContractAnnotation__c</fullName>
    <inlineHelpText>Vertragsanmerkungen, die beim erstellen eines Kooperationsvertrags (PDF) darauf vermerkt werden und somit für den/die Kund*in sichtbar sind.</inlineHelpText>
    <label>Contract Annotation</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>