force-app/main/default/objects/Quote/fields/Valid_until__c.field-meta.xml
<CustomField>
    <fullName>Valid_until__c</fullName>
    <formula>ExpirationDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid until</label>
    <type>Date</type>
</CustomField>