force-app/main/default/objects/Quote/fields/XML_Feed__c.field-meta.xml
<CustomField>
    <fullName>XML_Feed__c</fullName>
    <description>Link provided by the customer, where they fill in all the required info for Reach setup in the Recruiter Portal.</description>
    <inlineHelpText>Link provided by the customer, where they fill in all the required info for Reach setup in the Recruiter Portal.</inlineHelpText>
    <label>XML Feed</label>
    <type>Url</type>
</CustomField>