force-app/main/default/objects/Quote/validationRules/LossReason.validationRule-meta.xml
<ValidationRule>
    <fullName>LossReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL(Opportunity.plLossReason__c, &quot;&quot;), 
ISCHANGED( Status ), 
ISPICKVAL(Status, &quot;Rejected&quot;) 
)</errorConditionFormula>
    <errorMessage>Please fill out Loss Reason on Opportunity!</errorMessage>
</ValidationRule>