force-app/main/default/objects/Quote/validationRules/Restrict_fields_changes_on_quotes.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_fields_changes_on_quotes</fullName>
    <active>true</active>
    <description>Restrict edits on the quote fields after quote has been accepted.</description>
    <errorConditionFormula>AND( $Profile.Name &lt;&gt;&quot;System Administrator&quot;,  $Profile.Name &lt;&gt;&quot;Finance&quot;,

OR(

AND (
      (TEXT(PRIORVALUE(Status))= &quot;Accepted&quot;) ,
      (TEXT(Status)= &quot;Accepted&quot;)),
AND (
      (TEXT(PRIORVALUE(Status))= &quot;Rejected&quot;) ,
      (TEXT(Status)= &quot;Rejected&quot;)),

AND (
      (TEXT(PRIORVALUE(Status))= &quot;Accepted&quot;) ,
       (TEXT(Status)!= &quot;Accepted&quot;)),
AND (
      (TEXT(PRIORVALUE(Status))= &quot;Rejected&quot;) ,
       (TEXT(Status)!= &quot;Rejected&quot;))
    )
)</errorConditionFormula>
    <errorMessage>You cant edit the fields once the quote has been accepted</errorMessage>
</ValidationRule>