force-app/main/default/objects/Quote/listViews/Expired_Quotes.listView-meta.xml
<ListView>
    <fullName>Expired_Quotes</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Draft,Sent</value>
    </filters>
    <label>Expired Quotes</label>
</ListView>